# cmdgen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cmdgen/: __init__.py  __main__.py  config.py  context.py  executor.py  main.py  update.py
cmdgen/llm/: __init__.py  base.py  gemini.py
tests/: __init__.py  test_config.py
