[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmdgen-ai-cli"
version = "0.1.2"
description = "AI-powered CLI tool to translate natural language into terminal commands"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "google-genai>=0.1.0",
    "pydantic>=2.0.0"
]

[project.scripts]
cmdgen = "cmdgen.main:cli_main"
cg = "cmdgen.main:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0"
]

[tool.hatch.build.targets.sdist]
exclude = [
    ".linux_venv",
    ".venv",
    "__pycache__",
]

[tool.hatch.build.targets.wheel]
packages = ["cmdgen"]
